gccida/c1/split_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48483:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48489:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v4.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48490:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( int *)x0[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48497:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v48, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48497:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v48, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48499:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v48; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48499:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v48; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48508:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1133( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48516:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v7, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48516:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v7, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48518:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48518:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v7; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48527:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1135( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48536:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v4.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48537:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)x0[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48543:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v13; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48544:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_943( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48548:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v4.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48549:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)x0[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48555:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v15; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/insn-recog.c:48558:16: error: must use 'enum' tag to refer to type 'mode_class'
v16 = *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v15 >> 14) & 0x3FC)); 
               ^
               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_1/src/obj/insn-recog.o] Error 1
